<resources>
    <string name="app_name">ToDoWithRoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_task_name">Enter a task name…</string>
    <string name="save_task">Save task</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="checkbox_done">Done?</string>
    <string name="task_name_in_edit">Task name…</string>
    <string name="update_task_button_edit">Update Task</string>
    <string name="delete_task_button_edit">Delete Task</string>
    <string name="done_edit">Done?</string>
</resources>